// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Consent Banner Container Canonical Consent Banner Container 1`] = `
<div>
  should correctly render privacy banner - LTR layout
</div>
`;

exports[`Canonical Consent Banner Container Canonical Consent Banner Container 2`] = `
<div>
  should correctly render privacy banner - RTL layout
</div>
`;

exports[`Canonical Consent Banner Container cookie 1`] = `
<div>
  should correctly render cookie banner - LTR layout
</div>
`;

exports[`Canonical Consent Banner Container cookie 2`] = `
<div>
  should correctly render cookie banner - RTL layout
</div>
`;
